sass/blocks/_header.sass
.header
  position: absolute
  top: 0
  left: 0
  right: 0
  width: 100%
  background-color: transparent

  &-wrapper
    position: relative
    display: flex
    align-items: center
    justify-content: space-between

  .logo
    display: flex
    &__text
      display: block
      width: 7rem
      height: 6rem
      text-align: center
      font: normal 600 2.6rem/6rem "Montserrat"
      text-transform: uppercase
      transition: background-color 0.5s ease, color 0.5s ease
      &:first-child
        background-color: $color-accent
        color: $color-light
      &:last-child
        background-color: $color-light
        color: $color-dark
    &:hover
      .logo
        &__text
          &:first-child
            background-color: $color-light
            color: $color-dark
          &:last-child
            background-color: $color-accent
            color: $color-light

  .nav
    &__list
      display: flex
      align-items: center
      justify-content: space-between
    &__link
      display: inline-block
      padding: 3.1rem 2.2rem
      text-decoration: underline transparent
      transition: all 0.5s ease
      @include title($font-size: 1.6rem, $line-height: 1)
      &:hover
        color: $color-light
        text-decoration: underline
      &--submenu
        padding: 0.6rem 1rem
        color: $color-dark
        transition: all 0.5s ease
        &:hover
          padding-left: 1.5rem
          color: $color-accent

    &__item
      &--dropdown
        position: relative
        &:hover
          // open submenu
          .nav__submenu
            margin-top: 0
            opacity: 1
            visibility: visible
      &__submenu
        margin-left: 0.7rem

      &--button
        margin-left: 4rem
        .nav__link
          display: flex
          align-items: center
          padding: 1.6rem 3.1rem
          background-image: linear-gradient(to left, #FF5F21, #ce501f, #FF5F21)
          background-position: right
          background-size: 200%
          transition: background-position 0.5s ease
          &-icon
            margin-right: 0.7rem
          &:hover
            text-decoration: none
            background-position: left

    &__submenu
      position: absolute
      top: 7rem
      left: 0
      z-index: 10
      min-width: 17rem
      margin-top: 2rem
      opacity: 0
      visibility: hidden
      padding: 1.7rem
      background-color: $color-light
      transition: margin-top 0.4s ease, opacity 0.4s ease, visibility 0.4s ease

  /*=== Mobile menu ===*/

  .mmenu
    display: none
    position: absolute
    right: 0
    top: 3.8rem
    width: 100%
    z-index: 99
    .slicknav_menu
      background: transparent
      .slicknav
        &_nav
          background: $color-light
        &_btn
          background: transparent
          margin-bottom: 0
          top: -2.4rem
          padding: 0.5rem
          right: 0
          margin-top: 0
          .slicknav_icon-bar
            background-color: $color-light !important
        &_open
          .slicknav_icon-bar
            background-color: $color-accent !important
        &_arrow
          font-size: 2.4rem
          font-weight: 500
          color: $color-accent

      .nav
        &__link
          padding: 0.8rem 1rem
          font: normal 400 1.5rem "Montserrat"
          text-transform: capitalize
          color: $color-dark
          &:hover
            color: $color-accent
            text-decoration: underline
          &--submenu
            padding: 0.7rem 1rem
            color: $color-dark
          &--dropdown
            padding: 0
        &__item
          &--button
            display: inline-block
            margin-left: 0
            .nav__link
              display: flex
              align-items: center
              padding: 1.6rem 3.1rem
              background-image: linear-gradient(to left, #FF5F21, #ce501f, #FF5F21)
              background-position: right
              background-size: 200%
              transition: background-position 0.5s ease
              color: $color-light
              &-icon
                margin-right: 0.7rem
              &:hover
                text-decoration: none
                background-position: left
                color: $color-light
        &__submenu
          position: static
          width: 100%
          margin-top: 0
          opacity: 1
          visibility: visible
          padding: 0 2rem
          margin-left: 0
          background: $color-light

